generate docs, fix build errors, and tests
